--- a/src/Client/vue-server-ui/package.json
+++ b/src/Client/vue-server-ui/package.json
@@ -8,12 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@aspnet/signalr": "~1.1.4",
     "@fortawesome/fontawesome": "1.2.0-6",
     "@fortawesome/fontawesome-svg-core": "~1.2.34",
     "@fortawesome/free-solid-svg-icons": "5.15.2",
     "@fortawesome/vue-fontawesome": "~2.0.2",
-    "axios": "~0.21.1",
+    "@microsoft/signalr": "6.0.1",
+    "axios": "^0.21.4",
     "core-js": "~3.9.0",
     "html-webpack-plugin": "~4.5.2",
     "material-design-icons-iconfont": "6.1.0",
