--- a/src/Server/Services/VueServer.Services.csproj
+++ b/src/Server/Services/VueServer.Services.csproj
@@ -15,8 +15,9 @@
   </ItemGroup>
     
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
-    <PackageReference Include="Xabe.FFMpeg" Version="3.5.1" />
+    <PackageReference Include="Xabe.FFMpeg" Version="5.1.0" />
   </ItemGroup>
     
   <ItemGroup>
